# tiago_dual_pick_place

./: CMakeLists.txt  README.md  package.xml  send_pick_right.sh
action/: PickPlacePose.action  PickUpObject.action  PlaceAutoObject.action  PlaceObject.action
cfg/: Grasps.cfg  Grasps_pal.cfg  Grasps_robotiq.cfg  SphericalGrasp.cfg
config/: pick_motions.yaml  pick_motions_left.yaml  pick_motions_pal.yaml  pick_motions_right.yaml  pick_place_params.yaml  pick_place_params_left.yaml  pick_place_params_pal.yaml  pick_place_params_pal_gripper.yaml  pick_place_params_right.yaml  pick_place_params_robotiq.yaml  tiago_motions_general.yaml
config/rviz/: tiago_dual_pick_place.rviz
launch/: pick_place.launch  pick_place_base_placement_demo.launch  pick_place_sim.launch  tiago_dual_gazebo_with_zed2.launch
old/: pick_aruco.launch  pick_client.py  rec.py
scripts/: arm_conf.py  grasps_server.py  pick_place_client.py  pick_place_server.py
srv/: PickPlaceAutoObject.srv  PickPlaceObject.srv  PickPlaceObjects.srv  PickPlaceSimple.srv
