<?xml version="1.0"?>
<package>
  <name>tiago_dual_pick_place</name>
  <version>1.0.0</version>
  <description>TIAGo++ pick and place pipeline</description>

  <author email="sammy.pfeiffer@pal-robotics.com">Sammy Pfeiffer</author>
  <author email="job.1994@gmail.com">Job Van Dieten</author>
  <author email="jordi.pages@pal-robotics.com">Jordi Pages</author>
  <author email="daljeet.nandha@stud.tu-darmstadt.de">Daljeet Nandha</author>
  <maintainer email="daljeet.nandha@stud.tu-darmstadt.de">Daljeet Nandha</maintainer>

  <license>Modified BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
</package>
